added cache to auth service and authentication
