# backend/auth/swagger.json
@@ -86,6 +86,16 @@
                 "summary": "logout a user",
                 "tags": ["Authentication"],
                 "consumes": "application/json",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "logout",
+                        "schema": {
+                            "$ref": "#/definitions/Logout"
+                        },
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -126,7 +136,26 @@
                     }
                 }
             }
-        },  
+        },
+        "/auth/token/all": {
+            "get": {
+                "summary": "Retrieve all tokens",
+                "tags": ["Authentication"],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "message": {
+                                "type": "string"   
+                            },
+                            "token": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/auth/token/{userId}": {
             "post": {
                 "summary": "Create a new token",
@@ -286,6 +315,13 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "Logout": {
+            "properties": {
+                "username": {
                     "type": "string"
                 }
             }
